# fullstacktemplate

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  echo.py  health.py  logs.py  math.py  time.py
backend/app/api/v1/schemas/: admin.py  echo.py  logs.py  math.py  time.py
backend/app/core/: config.py  logging.py
frontend/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/pages/: echo.html  health.html  math.html  time.html
frontend/src/: logger.ts
frontend/src/pages/: echo-page.ts  echo.ts  health-page.ts  health.ts  home-page.ts  home.ts  math-page.ts  math.ts  shared.ts  time-page.ts  time.ts
frontend/src/services/: api-client.ts  operation-summary.ts
frontend/src/ui/: result-panel.ts
frontend/tests/: logger.test.ts  pages.integration.test.ts
fullstack_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dev_down.py  dev_up.py
tests/backend/: conftest.py  test_admin.py  test_echo.py  test_health.py  test_logs.py  test_math.py  test_time.py
